# python-project-template

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/template_package/: __init__.py  main.py  utils.py
tests/: test_main.py
